kubernetes/apps/monitoring/vmlogs/app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: vmlogs-server
  annotations:
    io.cilium/lb-ipam-ips: 10.12.0.103
    external-dns.alpha.kubernetes.io/hostname: logingestion.jonandlinz.io
spec:
  ports:
    - name: http
      protocol: TCP
      port: 9428
      targetPort: 9428
    - name: syslog-udp
      protocol: UDP
      port: 514
      targetPort: 514
    - name: syslog-tcp
      protocol: TCP
      port: 514
      targetPort: 514
  type: LoadBalancer
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv4
  selector:
    app: server
