kubernetes/apps/monitoring/vmlogs/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmlogs-httproute
spec:
  hostnames: ["vmlogs.jonandlinz.io"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: vmlogs-server
          namespace: monitoring
          port: 9428
